css/nav.css
:root {
    --baseColor: #87b9ff;
    --logoColor1: #91ffe9;
    --logoColor2: #c9fdff;
}

* {
    color: aliceblue;
    font-family: monospace;
    box-sizing: border-box;
}

body {
    background-color: var(--baseColor);
    margin: 6vh 0 0 0;
}

.nav_logo {
    font-size: 20px;
    text-decoration: none;
    margin-left: 18vh;
    font-weight: bold;
    color: var(--logoColor1);
}

.logo-span {
    /* color: rgb(255, 252, 205); */
    color: var(--logoColor2);
}

.nav_bar {
    background-color: var(--baseColor);
    box-sizing: border-box;
    width: 100vw;
    position: fixed;
    display: flex;
    overflow: hidden;
    margin: 0;
    padding-right: 10%;
    padding-left: 2%;
    padding-top: 10px;
    justify-content: space-between;
    align-items: center;
    top: 0;
    left: 0;
}

nav p {
    float: left;
}

nav ul {
    list-style: none;
    padding: 0;
    margin: 0;
}

nav li{
    display: inline-block;
    justify-content: center;
}

nav a {
    color: white;
    text-decoration: none;
    font-size: 20px;
    padding: 1.5vh;
    margin: 0;
    display: block;
    min-width: 10vh;
    text-align: center;
    justify-content: center;
}

nav a:hover{
    font-weight: bold;
    color: #fffff1;
    background: linear-gradient(transparent, var(--logoColor2));
}

#alt-intro {
    opacity: 1;
    position: fixed;
    height: 100vh;
    width: 100vw;
    background-color: var(--baseColor);
    z-index: 200;
    display: grid;
    place-content: center;
    animation: moveIntro 0.7s ease-in-out forwards;
  }

  @keyframes moveIntro {
    to {
        transform: translateY(100vh);
    }
  }

